@@ -1,25 +1,19 @@
 package com.binar.challenge4.security.impl;
 
-import com.binar.challenge4.entity.RoleEntity;
 import com.binar.challenge4.entity.UserEntity;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
-import javax.persistence.ManyToMany;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-import static javax.persistence.FetchType.EAGER;
 
 public class UserDetailsImpl implements UserDetails {
     private static final long serialVersionUID = 1L;
 
-    private Long user_id;
+    private Long userid;
     private String username;
     private String email;
 
@@ -28,8 +22,8 @@ public class UserDetailsImpl implements UserDetails {
 
     private Collection<? extends GrantedAuthority> authorities;
 
-    public UserDetailsImpl(long user_id, String username, String email, String password, List<GrantedAuthority> authorities) {
-        this.user_id=user_id;
+    public UserDetailsImpl(long userid, String username, String email, String password, List<SimpleGrantedAuthority> authorities) {
+        this.userid=userid;
         this.username=username;
         this.email=email;
         this.password=password;
@@ -37,12 +31,12 @@ public class UserDetailsImpl implements UserDetails {
     }
 
     public static UserDetailsImpl build(UserEntity user) {
-        List<GrantedAuthority> authorities = user.getRoles().stream()
+        List<SimpleGrantedAuthority> authorities = user.getRoles().stream()
                 .map(role -> new SimpleGrantedAuthority(role.getName()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new UserDetailsImpl(
-                user.getUser_id(),
+                user.getUserid(),
                 user.getUsername(),
                 user.getEmail(),
                 user.getPassword(),
@@ -51,8 +45,8 @@ public class UserDetailsImpl implements UserDetails {
     }
 
 
-    public Long getUser_id() {
-        return user_id;
+    public Long getUserid() {
+        return userid;
     }
 
     public String getEmail() {
@@ -99,6 +93,10 @@ public class UserDetailsImpl implements UserDetails {
         if (o == null || getClass() != o.getClass())
             return false;
         UserDetailsImpl user = (UserDetailsImpl) o;
-        return Objects.equals(user_id, user.user_id);
+        return Objects.equals(userid, user.userid);
+    }
+    @Override
+    public int hashCode() {
+        return 0;
     }
 }
